fix: delete padding from Best Bikes container
since the cards were not centered, deleted standard padding from the ul element

--- a/src/components/BestBikes/BestBikes.module.css
+++ b/src/components/BestBikes/BestBikes.module.css
@@ -16,4 +16,5 @@
   justify-items: center;
   gap: 2rem;
   list-style: none;
+  padding: 0;
 }
